--- a/RyansAppFramework/src/_Experiments_/SeveralTabs.fxml
+++ b/RyansAppFramework/src/_Experiments_/SeveralTabs.fxml
@@ -30,7 +30,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/Newcopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/Newcopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -39,7 +39,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/Foldercopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/Foldercopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -48,7 +48,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/Floppycopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/Floppycopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -57,7 +57,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/FloppyDowncopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/FloppyDowncopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -66,7 +66,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/Exportcopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/Exportcopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -75,7 +75,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/Powercopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/Powercopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -88,7 +88,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/Undocopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/Undocopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -97,7 +97,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/Redocopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/Redocopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -106,7 +106,7 @@
                            <graphic>
                               <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@Images/Bookcopy.png" />
+                                    <Image url="@../_Externals_/_Resources_/Images/Bookcopy.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -252,19 +252,19 @@
                                                 <Button mnemonicParsing="false" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" text="Change2" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
                                                 <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                                                    <image>
-                                                      <Image url="@../Resources/Screen%20Shot%202017-04-12%20at%209.21.51%20PM.png" />
+                                                      <Image url="@../_Externals_/_Resources_/Screen%20Shot%202017-04-12%20at%209.21.51%20PM.png" />
                                                    </image>
                                                 </ImageView>
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Right Footer Image1:" GridPane.rowIndex="1" />
                                                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Right Footer Image2:" GridPane.rowIndex="2" />
                                                 <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                                    <image>
-                                                      <Image url="@../Resources/Screen%20Shot%202017-04-12%20at%209.21.51%20PM.png" />
+                                                      <Image url="@../_Externals_/_Resources_/Screen%20Shot%202017-04-12%20at%209.21.51%20PM.png" />
                                                    </image>
                                                 </ImageView>
                                                 <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                                    <image>
-                                                      <Image url="@../Resources/Screen%20Shot%202017-04-12%20at%209.21.51%20PM.png" />
+                                                      <Image url="@../_Externals_/_Resources_/Screen%20Shot%202017-04-12%20at%209.21.51%20PM.png" />
                                                    </image>
                                                 </ImageView>
                                                 <Button mnemonicParsing="false" style="-fx-background-color: #bddaed; -fx-background-radius: 30,30;" text="Change3" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
